new setting for cache directory; and it will be created if it does not exist; make rdby cache write async

--- a/settings.json
+++ b/settings.json
@@ -24,5 +24,6 @@
       "carta-standard-rss": ["#commentblock"],
       "heise\\.de": ["#mitte_rechts"]
     }
-  }
+  },
+  "cache_directory": "./cache"
 }
