new filter types, xmlns bugfix, always first link:
* extended filter rules: now 4 different filters per url match
* fixed a bug with missing xmlns:content in rss
* feed parser uses always the first found link in item

--- a/settings.json
+++ b/settings.json
@@ -20,9 +20,19 @@
   "filter": {
     "activate": true,
     "jquery_url": "http://code.jquery.com/jquery-1.4.2.min.js",
-    "jquery_filters": {
-      "carta.info": ["#commentblock"],
-      "heise.de": ["#mitte_rechts"]
+    "rules": {
+      "heise.de": {
+        "remove": ["#mitte_rechts"],
+        "exclusive": ["#mitte_links"],
+        "prepend": [],
+        "append": []
+      },
+      "carta.info": {
+        "remove": ["#commentblock"]
+      },
+      "giessener-allgemeine.de": {
+        "prepend": [".fettvorspann"]
+      }
     }
   },
   "cache": {
