fixes several issues that afaik are related to #1:
* non-fatal response code error handling in crawler
* urlopen uses 403 response code for redirection
* meaningfull response code errors in feed
TODO: restore original description/content in case of error

--- a/settings.json
+++ b/settings.json
@@ -23,7 +23,7 @@
     "rules": {
       "heise.de": {
         "remove": ["#mitte_rechts"],
-        "exclusive": ["#mitte_links"],
+        "exclusive": [],
         "prepend": [],
         "append": []
       },
