--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "node_modules/iconv"]
 	path = node_modules/iconv
 	url = git://github.com/bnoordhuis/node-iconv.git
+[submodule "node_modules/jsdom"]
+	path = node_modules/jsdom
+	url = git://github.com/tmpvar/jsdom.git
