new feature: use firefox cookies for urlopen
- tested with firefox 4 cookies.sqlite
- currently ignoring the cookie fields expire and httpsOnly

--- a/settings.json
+++ b/settings.json
@@ -21,6 +21,14 @@
     "convert_charset": true
   },
 
+  "cookies":
+  {
+    "activate": false,
+    "whitelist": [],
+    "type": "firefox_sqlite",
+    "cookie_jar": "/home/user/.mozilla/firefox/abcdefgh.default/cookies.sqlite"
+  },
+
   "ce":
   {
     "cache": true
